--- a/src/index.css
+++ b/src/index.css
@@ -190,6 +190,12 @@ body {
       font-size: 6rem;
   }
 
+  .js-form input {
+    font-size: 1.3rem;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+  }
+
   .js-greetings {
     font-size: 2.2rem;
     margin: 1.3rem 0 1.5rem;
@@ -226,6 +232,12 @@ body {
 
   #clock__timestamp {
       font-size: 7rem;
+  }
+
+  .js-form input {
+    font-size: 1.4rem;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
   }
 
   .js-greetings {
@@ -271,6 +283,12 @@ body {
     margin: 1.3rem 0 1.7rem;
   }
 
+  .js-form input {
+    font-size: 1.4rem;
+    margin-top: 2rem;
+    margin-bottom: 1.8rem;
+  }
+
   .js-toDoForm input {
     width: 100%;
     font-size: 1.1rem;
@@ -302,6 +320,12 @@ body {
 
   #clock__timestamp {
       font-size: 7.5rem;
+  }
+
+  .js-form input {
+    font-size: 1.4rem;
+    margin-top: 2rem;
+    margin-bottom: 1.8rem;
   }
 
   .js-greetings {
